base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak-ENV
  labels:
    observability: "enabled"
  annotations:
    argocd.argoproj.io/sync-wave: "0"
